# brave-core

./: .pylintrc  BUILD.gn  DEPS  Jenkinsfile  PRESUBMIT.py  brave_paks.gni  chromium_presubmit_blocklist.json5  package-lock.json  package.json
.storybook/: main.js
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  generated_resources.grd  os_settings_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp
browser/: about_flags.cc  brave_browser_main_parts.cc  brave_content_browser_client.cc  brave_shell_integration.cc  brave_shell_integration.h  brave_shell_integration_mac.h  brave_shell_integration_mac.mm  sources.gni
components/: history_clusters_strings.grdp  (+3 more)
components/brave_rewards/resources/page/: BUILD.gn  brave_rewards_page.html  brave_rewards_page.tsx  brave_rewards_page_android.html
components/brave_rewards/resources/page/components/: connect_wallet_modal.style.ts  connect_wallet_modal.tsx  pageWallet.tsx  settings.style.ts  settings.tsx
components/brave_rewards/resources/page/reducers/: default_state.ts  rewards_reducer.ts
components/l10n/common/: BUILD.gn  locale_constants.h  locale_util.cc  locale_util.h  locale_util_unittest.cc  ofac_sanction_util.cc  ofac_sanction_util.h  ofac_sanction_util_unittest.cc  ofac_sanctioned_iso_3166_1_country_code_constants.h  ofac_sanctioned_un_m49_area_code_constants.h  un_m49_area_code_constants.h  un_m49_area_code_util.cc  un_m49_area_code_util.h  un_m49_area_code_util_unittest.cc
(+322 files in other folders)
