static_library("common") {
  deps = [
    "//base",
    "//third_party/icu",
    "//ui/base",
  ]

  sources = [
    "locale_constants.h",
    "locale_util.cc",
    "locale_util.h",
    "localization_util.cc",
    "localization_util.h",
    "ofac_sanction_util.cc",
    "ofac_sanction_util.h",
    "ofac_sanctioned_iso_3166_1_country_code_constants.h",
    "ofac_sanctioned_un_m49_area_code_constants.h",
    "un_m49_area_code_constants.h",
    "un_m49_area_code_util.cc",
    "un_m49_area_code_util.h",
  ]
}
