import("//brave/components/common/typescript.gni")

transpile_web_ui("page") {
  # what is the output bundle called and what is the entry point file
  entry_points = [ [
        "brave_rewards_page",
        rebase_path("brave_rewards_page.tsx"),
      ] ]

  deps = [ "//brave/vendor/bat-native-ledger/src/bat/ledger/internal/endpoints:error_types_js" ]

  # what is the directory / pack name
  resource_name = "brave_rewards_page"
}
